# orjson

./: .env  .gitattributes  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  azure-linux.yml  azure-macos.yml  azure-pipelines.yml  build  build.rs  conftest.py  deploy  develop  graph  lint  orjson.pyi  pgo  profile  pybench  pycorrectness  pydataclass  pyindent  pymem  pynonstr  pynumpy  pyproject.toml  pysort  pytest  requirements-lint.txt  requirements.txt  rust-toolchain  setup.py
.cargo/: config
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
.github/actions/manylinux/: action.yaml
.github/workflows/: CI.yml  artifact.yaml  build-wheels.yaml  ci.yml  debug.yaml  lint.yaml  linux-cross.yaml  linux.yaml  manylinux-2-28.yaml  manylinux2014.yaml  manylinux_2_28.yaml  musllinux.yaml  next.yaml  release.yml  stale.yaml  test.yml  unusual.yaml
bench/: benchmark_dumps.py  benchmark_empty.py  benchmark_loads.py  data.py  mem_usage  requirements.txt  run_default  run_func  run_mem  simple_thread_pool.py  util.py
bytecount/: Cargo.toml  LICENSE.MIT  README.md
bytecount/src/: integer_simd.rs  lib.rs  naive.rs
bytecount/src/simd/: generic.rs  mod.rs  x86_avx2.rs  x86_sse2.rs
ci/: azure-debug.yml  azure-linux-container.yml  azure-linux.yml  azure-linux38.yml  azure-macos.yml  azure-manylinux.yml  azure-pipelines.yml  azure-posix.yml  azure-sdist.yml  azure-win.yml  config.toml  deploy  drone.yml
data/: blns.json.xz
data/jsonchecker/: fail34.json  fail35.json
data/roundtrip/: roundtrip30.json
encoding_rs/: Cargo.toml  README.md  silence-warnings.patch
encoding_rs/src/: ascii.rs  big5.rs  euc_jp.rs  euc_kr.rs  gb18030.rs  handles.rs  iso_2022_jp.rs  lib.rs  macros.rs  mem.rs  replacement.rs  shift_jis.rs  simd_funcs.rs  single_byte.rs  testing.rs  utf_16.rs  utf_8.rs  x_user_defined.rs
include/: pyo3-ffi-pylong-asbytearray-with-exceptions.patch  pyo3-ffi-pymutex-new.patch  yyjson-recursion-limit.patch  yyjson-reduce-unused.patch  yyjson.c  yyjson.h
include/json/: Cargo.toml
include/json/src/: de.rs  lib.rs  map.rs  number.rs  ser.rs
include/json/src/value/: de.rs  from.rs  mod.rs  ser.rs
include/pyo3/pyo3-build-config/: Cargo.toml
include/pyo3/pyo3-build-config/src/: impl_.rs  lib.rs
include/pyo3/pyo3-ffi/: Cargo.toml
include/pyo3/pyo3-ffi/src/: methodobject.rs  modsupport.rs  (+2 more)
include/yyjson/: skip-utf8.patch  test.c  yyjson.c  yyjson.h
integration/: client  gunicorn  init  requirements.txt  run  thread  typestubs.py  uwsgi  wsgi.py
json/: Cargo.toml  README.md  perfect_float.patch
json/src/: de.rs  error.rs  iter.rs  lib.rs  macros.rs  map.rs  number.rs  read.rs  ser.rs
json/src/value/: de.rs  from.rs  mod.rs
json/tests/: debug.rs  map.rs  regression.rs  test.rs
json/tests/crate/: Cargo.toml  test.rs
json/tests/macros/: mod.rs
json/tests/regression/: issue520.rs  mod.rs
json/tests/ui/: missing_colon.stderr  missing_value.stderr  not_found.stderr  parse_expr.stderr  parse_key.stderr  unexpected_after_array_element.stderr  unexpected_after_map_entry.stderr  unexpected_colon.stderr  unexpected_comma.stderr
pysrc/orjson/: __init__.py  __init__.pyi
script/: blame-to-header  cargo  check-pypi  check-version  debug  develop  generate-yyjson  graph  install-fedora  lint  profile  pybench-empty  pycorrectness  pydataclass  pyindent  pymem  pynonstr  pynumpy  pysort  pytest  valgrind  vendor-yyjson
src/: alloc.rs  array.rs  bytes.rs  dataclass.rs  datetime.rs  decode.rs  default.rs  dict.rs  encode.rs  error.rs  exc.rs  exception.rs  ffi.rs  iter.rs  lib.rs  module.rs  numpy.rs  opt.rs  typeref.rs  unicode.rs  util.rs  uuid.rs  writer.rs  yyjson.rs
src/deserialize/: cache.rs  decode.rs  default.rs  deserializer.rs  error.rs  input.rs  json.rs  mod.rs  pyobject.rs  utf8.rs  yyjson.rs
src/deserialize/backend/: ffi.rs  json.rs  mod.rs  yyjson.rs
src/ffi/: atomic.rs  atomiculong.rs  buffer.rs  bytes.rs  compat.rs  dict.rs  fragment.rs  gil.rs  immortal.rs  list.rs  long.rs  mod.rs  pyboolref.rs  pybytearrayref.rs  pybytesref.rs  pydateref.rs  pydatetimeref.rs  pydictref.rs  pyfloatref.rs  pyfragmentref.rs  pyintref.rs  pylistref.rs  pymemoryview.rs  pynoneref.rs  pytimeref.rs  pytupleref.rs  pytype.rs  pyuuidref.rs  yyjson.rs
src/ffi/numpy/: array.rs  datetime.rs  mod.rs  scalar.rs
src/ffi/pystrref/: object.rs  pyunicode_new.rs
src/serialize/: anyset.rs  buffer.rs  bytes.rs  complex.rs  dataclass.rs  datetime.rs  datetimelike.rs  decimal.rs  default.rs  dict.rs  encode.rs  error.rs  float.rs  frozenset.rs  gen.rs  generator.rs  int.rs  json.rs  list.rs  mod.rs  non_str.rs  numpy.rs  obtype.rs  pyenum.rs  serializer.rs  set.rs  state.rs  str.rs  tuple.rs  uuid.rs  writer.rs
src/serialize/numpy/: array.rs  datetime.rs  item.rs  mod.rs  scalar.rs
src/serialize/per_type/: dataclass.rs  datetime.rs  datetimelike.rs  default.rs  dict.rs  float.rs  fragment.rs  int.rs  list.rs  mod.rs  none.rs  numpy.rs  pybool.rs  pyenum.rs  pytorch.rs  tuple.rs  unicode.rs  uuid.rs
src/serialize/writer/: byteswriter.rs  callbackwriter.rs  escape.rs  format_str.rs  formatter.rs  half.rs  json.rs  mod.rs  num.rs  simd.rs  smallfixedbuffer.rs  str.rs  uuid.rs  writer.rs
src/str/: avx512.rs  check.rs  create.rs  ffi.rs  mod.rs  pystr.rs  pyunicode_new.rs  scalar.rs
test/: decimal_test.py  load_nan_as_none.py  requirements.txt  test_api.py  test_append_newline.py  test_big_integer.py  test_buffer.py  test_bytes.py  test_bytes_as_json.py  test_bytes_as_string.py  test_canonical.py  test_circular.py  test_dataclass.py  test_datetime.py  test_decimal.py  test_default.py  test_dict.py  test_dump_to.py  test_dumps_indent_ascii.py  test_ensure_ascii.py  test_enum.py  test_error.py  test_escape.py  test_fake.py  test_fixture.py  test_float.py  test_fragment.py  test_generator.py  test_hypothesis.py  test_indent.py  test_issue221.py  test_issue274.py  test_issue331.py  test_jsonchecker.py  test_loads_next.py  test_memory.py  test_non_str_keys.py  test_numpy.py  test_parsing.py  test_pretty_format.py  (+13 more)
(+11 files in other folders)
