[package]
name = "orjson"
version = "3.7.0"
authors = ["ijl <ijl@mailbox.org>"]
description = "Fast, correct Python JSON library supporting dataclasses, datetimes, and numpy"
edition = "2018"
resolver = "2"
rust-version = "1.54"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/ijl/orjson"
homepage = "https://github.com/ijl/orjson"
readme = "README.md"
keywords = ["fast", "json", "dataclass", "dataclasses", "datetime", "rfc", "8259", "3339"]
include = [
    "Cargo.toml",
    "CHANGELOG.md",
    "data/*",
    "include",
    "LICENSE-APACHE",
    "LICENSE-MIT",
    "pyproject.toml",
    "README.md",
    "src/*",
    "test/*.py",
    "test/requirements.txt",
]

[lib]
name = "orjson"
crate-type = ["cdylib"]

[package.metadata.maturin]
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python",
    "Programming Language :: Rust",
    "Typing :: Typed",
]

[features]
default = []

# Use SIMD intrinsics. This requires Rust on the nightly channel.
unstable-simd = [
    "bytecount/generic-simd",
    "encoding_rs/simd-accel",
    "simdutf8/aarch64_neon",
]

# Build yyjson as a backend.
yyjson = [
    "bindgen",
    "cc",
]

[dependencies]
ahash = { version = "0.7", default_features = false }
arrayvec = { version = "0.7", default_features = false, features = ["std", "serde"] }
associative-cache = { version = "1" }
beef = { version = "0.5", default_features = false, features = ["impl_serde"] }
bytecount = { version = "^0.6.2", default_features = false, features = ["runtime-dispatch-simd"] }
chrono = { version = "0.4", default_features = false }
encoding_rs = { version = "0.8", default_features = false }
inlinable_string = { version = "0.1" }
itoa = { version = "1", default_features = false }
once_cell = { version = "1", default_features = false }
pyo3-ffi = { version = "^0.16.5", default_features = false, features = ["extension-module"]}
ryu = { version = "1", default_features = false }
serde = { version = "1", default_features = false }
serde_json = { version = "^1.0.68", default_features = false, features = ["std", "float_roundtrip"] }
simdutf8 = { version = "0.1", default_features = false, features = ["std"] }
smallvec = { version = "^1.8", default_features = false, features = ["union", "write"] }

[build-dependencies]
bindgen = { version = "0.59", optional = true }
cc = { version = "1", optional = true  }
pyo3-build-config = "^0.16.4"

[profile.release]
codegen-units = 1
debug = false
incremental = false
lto = "thin"
opt-level = 3
panic = "abort"

[profile.release.build-override]
opt-level = 0
