[package]
name = "orjson"
version = "3.10.13"
authors = ["ijl <ijl@mailbox.org>"]
description = "Fast, correct Python JSON library supporting dataclasses, datetimes, and numpy"
edition = "2021"
resolver = "2"
rust-version = "1.72"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/ijl/orjson"
homepage = "https://github.com/ijl/orjson"
readme = "README.md"
keywords = ["fast", "json", "dataclass", "dataclasses", "datetime", "rfc", "8259", "3339"]
include = [
    "Cargo.toml",
    "CHANGELOG.md",
    "data",
    "include",
    "LICENSE-APACHE",
    "LICENSE-MIT",
    "pyproject.toml",
    "README.md",
    "src",
    "test/*.py",
    "test/requirements.txt",
]

[lib]
name = "orjson"
crate-type = ["cdylib"]

[features]
default = []

# Use SIMD intrinsics. This requires Rust on the nightly channel.
unstable-simd = []

# Include runtime-detected functions that use AVX512VL. Requires unstable-simd and amd64.
avx512 = []

# Avoid bundling libgcc on musl.
unwind = ["unwinding"]

# Build yyjson as a backend and panic if it fails. The default is to attempt
# to build and on failure fall back to another backend.
yyjson = []

# Features detected by build.rs. Do not specify.
inline_int = []
intrinsics = []
optimize = []

[dependencies]
associative-cache = { version = "2", default-features = false }
bytecount = { version = "^0.6.7", default-features = false, features = ["runtime-dispatch-simd"] }
compact_str = { version = "0.8", default-features = false, features = ["serde"] }
encoding_rs = { version = "0.8", default-features = false }
half = { version = "2", default-features = false, features = ["std"] }
itoa = { version = "1", default-features = false }
itoap = { version = "1", default-features = false, features = ["std", "simd"] }
jiff = { version = "^0.1", default-features = false, features = ["alloc"] }
once_cell = { version = "1", default-features = false, features = ["alloc", "race"] }
pyo3-ffi = { path = "include/pyo3/pyo3-ffi", default-features = false, features = ["extension-module"]}
ryu = { version = "1", default-features = false }
serde = { version = "1", default-features = false }
serde_json = { version = "1", default-features = false, features = ["std", "float_roundtrip"] }
simdutf8 = { version = "0.1", default-features = false, features = ["std", "public_imp", "aarch64_neon"] }
smallvec = { version = "^1.11", default-features = false, features = ["union", "write"] }
unwinding = { version = "^0.2.4", default-features = false, features = ["unwinder"], optional = true }
uuid = { version = "1", default-features = false }
xxhash-rust = { version = "^0.8", default-features = false, features = ["xxh3"] }

[build-dependencies]
cc = { version = "1" }
pyo3-build-config = { path = "include/pyo3/pyo3-build-config" }
version_check = { version = "0.9" }

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
lto = "off"
opt-level = 3
overflow-checks = true

[profile.release]
codegen-units = 1
debug = false
incremental = false
lto = "thin"
opt-level = 3
panic = "abort"

[profile.release.build-override]
opt-level = 0
