[tool.poetry]
name = "orjson-decimal"
version = "0.1.0"
description = "orjson with decimal support"
authors = [
    "Reynaldo Gil <gilcu2@gmail.com>",
]

[tool.poetry.dependencies]
python = ">=3.9.0, <4.0.0"
arrow = "^1.2.3"
faker = "^18.11.2"
numpy = "^1.25.0"
pendulum = "^2.1.2"
psutil = "^5.9.5"
pytz = "^2023.3"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
autoflake = "^2.2.0"
black = "^23.3.0"
isort = "^5.12.0"
maturin = "^1.1.0"
mypy = "^1.4.1"
ruff = "^0.0.275"
types-python-dateutil = "^2.8.19.13"
types-pytz = "^2023.3.0.0"
types-simplejson = "^3.19.0.1"
types-ujson = "^5.8.0.0"
flask = "^2.3.2"
gunicorn = "^20.1.0"
httpx = "^0.24.1"
memory-profiler = "^0.61.0"
pytest-benchmark = "^4.0.0"
pytest-random-order = "^1.1.0"
python-rapidjson = "^1.10"
simplejson = "^3.19.1"
tabulate = "^0.9.0"
ujson = "^5.8.0"




[project]
name = "orjson"
repository = "https://github.com/ijl/orjson"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python",
    "Programming Language :: Rust",
    "Typing :: Typed",
]

[project.urls]
Changelog = "https://github.com/ijl/orjson/blob/master/CHANGELOG.md"

[build-system]
build-backend = "maturin"
requires = ["maturin>=1,<2"]

[tool.maturin]
python-source = "pysrc"
include = [
    { format = "sdist", path = ".cargo/*" },
    { format = "sdist", path = "build.rs" },
    { format = "sdist", path = "Cargo.lock" },
    { format = "sdist", path = "include/**/*" },
]


[tool.black]
line-length = 88
target-version = ["py37"]
include = ".pyi?$"

[tool.ruff]
line-length = 88
target-version = "py37"

ignore = [
    "E501", # line too long
    "F601", # Dictionary key literal ... repeated
]

[tool.mypy]
python_version = "3.8" # numpy
